# PrijateliTree

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
prijateli_tree/: .gitignore  pyproject.toml  settings.py
prijateli_tree/_templates/global/: Page.html
prijateli_tree/app/: config.py  database.py  main.py  models.py  schemas.py
prijateli_tree/app/controllers/: games.py  players.py
prijateli_tree/app/languages/: al.json  en.json  language_6person 03182024.xlsx  language_6person 12242023.xlsx  mk.json  process_translations.py  sq.json  tr.json
prijateli_tree/app/locales/: al.json  al.yml  en.json  en.yml  mk.json  mk.yml  tr.json  tr.yml
prijateli_tree/app/models/: config.py  database.py
prijateli_tree/app/routers/: administration.py  games.py  test_games.py
prijateli_tree/app/static/: custom.css  materialize.min.css  materialize.min.js  mui.min.js
prijateli_tree/app/templates/: 404.html  admin_dashboard.html  admin_login.html  analysis_dashboard.html  base.html  choose_neighbors.html  create_game.html  create_session.html  end_of_game.html  end_of_session.html  game_start.html  home_page.html  networks.html  new_session.html  qualtrics.html  ready.html  real_game_transition.html  round.html  score_header.html  self_selected_intro.html  start_of_game.html  student_info.html  thanks_for_playing.html  waiting.html
prijateli_tree/app/utils/: administration.py  constants.py  database.py  games.py  process_translations.py
prijateli_tree/app/views/: administration.py  games.py
prijateli_tree/migrations/: alembic.ini  env.py
prijateli_tree/migrations/versions/: 2023-09-30-0037_4ff818206a9f_first_migration.py  2023-09-30-0548_7c4c806756a9_.py  2023-10-01-0109_8f0f0cbed05e_.py  2023-10-01-0131_de1c29a58234_.py  2023-10-02-0510_b0d875f0a377_.py  2023-10-02-0513_6b2d4bcadf98_.py  2023-10-02-2138_44f42b35d858_.py  2023-10-05-2157_47fe187bc716_.py  2023-10-06-1624_e5b498dd07a6_.py  2023-10-09-1854_e9d4f29c6187_.py  2023-10-09-1937_260d503a3c0d_.py  2023-10-09-1959_8a5c8a351948_.py  (+21 more)
prijateli_tree/routers/: administration.py  games.py
prijateli_tree/tests/: conftest.py  games_test.py  test_games.py  test_home.py
(+39 files in other folders)
