[tool.poetry]
name = "prijatelitree"
version = "0.1.0"
description = "A FastAPI application used to play lab games and collect survey data."
authors = ["Ari Anisfeld", "Pepi Pandiloski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
