[tool.poetry]
name = "prijateli-tree"
version = "0.1.0"
description = ""
authors = ["michplunkett <5885605+michplunkett@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "prijateli_tree"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
